--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Template Site</title>
-    </head>
-    <body>
-        <section id='root'></section>
-    </body>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Stopwatch</title>
+  </head>
+  <body>
+    <section id="root"></section>
+  </body>
 </html>
